# Comet-tracker

./: .gitignore  main.py  pyproject.toml
app/: __init__.py
app/config/: config.py  logger.py
app/controllers/: __init__.py  telebot.py
app/models/: __init__.py  comet.py  cometa.py
app/services/: __init__.py  bd_service.py
resources/: config.ini
test/services/: bd_service_test.py
test/test_config/: config_test.py
